apps/media-server/tdarr/tdarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  selector:
    app: tdarr
  ports:
    - name: webui
      protocol: TCP
      port: 8265
      targetPort: 8265
    - name: server
      protocol: TCP
      port: 8266
      targetPort: 8266
